# lv95-converter

./: .gitignore  Makefile  README.md  coord-conv.cpp  main.cpp  makefile  meson.build
configuration-files/: config.hpp.in  lv95-converter.1.in  meson.build
headers/: coord-conv.h
include/: coord-conv.hpp
man/: lv95-converter.1  lv95-converter.1.md
src/: coord-conv.cpp  main.cpp  meson.build
